# aibot

./: .env.sample  .gitignore  CLAUDE.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: claude-code-review.yml
resources/: .gitignore  instructions-sample.yml
src/aibot/: __main__.py  cli.py
src/aibot/core/entities/: chat.py
src/aibot/discord/: client.py  event.py
src/aibot/discord/commands/: __init__.py  chat.py  fixme.py  fixpy.py  instruction.py  limit.py  permission.py  provider.py  talk.py
src/aibot/discord/decorators/: permission.py  usage.py
src/aibot/discord/utils/: models.py
src/aibot/infrastructure/api/: _anthropic.py  _gemini.py  _openai.py  _params.py  factory.py
src/aibot/infrastructure/db/dao/: _base.py  instruction.py  moderation.py  permission.py  system.py  usage.py
src/aibot/security/: input_validator.py
src/aibot/services/: instruction.py  moderation.py  provider.py  scheduler.py  secret_manager.py  system.py  thread_session.py
src/aibot/utils/: logger.py
src/aibot/utils/decorators/: usage.py
